fixing spacing in search label  css

--- a/css/faci_styles.css
+++ b/css/faci_styles.css
@@ -1786,6 +1786,7 @@ background-color: transparent;
 padding: 5px;
 border-radius: 5px;
 width: auto; /* Automatically adjust width based on content */
+overflow: hidden;
 }
 .search-form label {
   font-weight: 12px;
